--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NODE_ENV=development
 MONGODB_URI=mongodb://localhost:27017/Laptop
+BASE_URL = http://localhost:8080
 SECRETKEY=dungpro
 PORT=8080
 TIME_SECRET=1h
