--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 NODE_ENV=development
 MONGODB_URI="mongodb+srv://root:root@cluster0.evd3f.mongodb.net/Laptop?retryWrites=true&w=majority"
-BASE_URL = http://localhost:8080
+BASE_URL = https://api-laptop-shop.herokuapp.com
 SECRETKEY=dungpro
 PORT=8080
 TIME_SECRET=1h
 email_username=web.bocau.duathu@gmail.com
 email_password=Vanhung0206
-url_verifyEmail =http://localhost:8080/api/auth/accountVerification/
+url_verifyEmail =/api/auth/accountVerification/
 url_changePassord = https://localhost:3000/forgot/
 vnp_TmnCode =MKEU5PWQ
 vnp_HashSecret =JMLMTFUPQGLWUGEOBMRBUIZBZBJUJUBE
