--- a/.env
+++ b/.env
@@ -6,9 +6,8 @@ PORT=8080
 TIME_SECRET=1h
 email_username=web.bocau.duathu@gmail.com
 email_password=Vanhung0206
+DOMAIN_FE=http://localhost:3000/
 url_verifyEmail =/api/auth/accountVerification/
-url_changePassord = https://localhost:3000/forgot/
 vnp_TmnCode =MKEU5PWQ
 vnp_HashSecret =JMLMTFUPQGLWUGEOBMRBUIZBZBJUJUBE
-vnp_ReturnUrl =https://localhost:3000/user/order
 vnp_Url =http://sandbox.vnpayment.vn/paymentv2/vpcpay.html
