--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "server",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "nodemon node app.js"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "config": "^3.3.6",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "dateformat": "^4.5.1",
-    "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.2",
-    "nodemailer": "^6.6.2",
-    "nodemon": "^2.0.9",
-    "qs": "^6.10.1",
-    "randomstring": "^1.2.1",
-    "sha256": "^0.2.0"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "start": "nodemon node app.js"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.20.0",
+        "config": "^3.3.7",
+        "cookie-parser": "~1.4.6",
+        "cors": "^2.8.5",
+        "dateformat": "^5.0.3",
+        "debug": "~4.3.4",
+        "dotenv": "^16.0.1",
+        "express": "~4.18.1",
+        "http-errors": "~2.0.0",
+        "jade": "~1.11.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.3.4",
+        "morgan": "~1.10.0",
+        "multer": "^1.4.4",
+        "nodemailer": "^6.7.5",
+        "nodemon": "^2.0.16",
+        "qs": "^6.10.3",
+        "randomstring": "^1.2.2",
+        "sha256": "^0.2.0"
+    }
 }
