--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ PORT=8080
 TIME_SECRET=1h
 email_username=web.bocau.duathu@gmail.com
 email_password=Vanhung0206
-DOMAIN_FE=http://localhost:3000/
+; DOMAIN_FE=http://localhost:3000/
+DOMAIN_FE=https://lap-top-xin.vercel.app/
 url_verifyEmail =/api/auth/accountVerification/
 vnp_TmnCode =MKEU5PWQ
 vnp_HashSecret =JMLMTFUPQGLWUGEOBMRBUIZBZBJUJUBE
